# cookiecutter-minimal

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.slug}}/: .gitignore  README.rst  fabfile.py  pyproject.toml
{{cookiecutter.slug}}/{{cookiecutter.slug}}/: __init__.py
