[tool.poetry]
name = "{{cookiecutter.slug}}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
coverage = "^4.4"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
